--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_card_swiper: ^7.0.1
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.10
+  flutter_markdown: ^0.7.3+1
+  url_launcher: ^6.3.0
   
   # HTTP requests
   http: ^1.2.2
