--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   # HTTP requests
   http: ^1.2.2
   
+  # Haptic feedback and sound
+  vibration: ^3.1.3
+  audioplayers: ^6.0.0
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -79,6 +83,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/sounds/
     - assets/icon/
 
 # Flutter Launcher Icons configuration
